<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828 "
    tools:context="com.example.finanzmanager.AddNew.IncomeMenu">

    <ImageButton
        android:id="@+id/Button_extraCatInc"
        android:layout_width="74dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="210dp"
        android:background="#282828"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_dividend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_gambling"
        app:srcCompat="@mipmap/plus_icon_round" />

    <Spinner
        android:id="@+id/dropDown_InOut"
        android:layout_width="203dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#282828"
        android:backgroundTint="#282828"
        android:popupBackground="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_gambling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Glücksspiel"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_extraCatInc"
        app:layout_constraintEnd_toEndOf="@+id/Button_gambling"
        app:layout_constraintStart_toStartOf="@+id/Button_gambling"
        app:layout_constraintTop_toBottomOf="@+id/Button_gambling" />

    <TextView
        android:id="@+id/textView_extraCat_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/droid"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/Button_extraCatInc"
        app:layout_constraintStart_toStartOf="@+id/Button_extraCatInc"
        app:layout_constraintTop_toBottomOf="@+id/Button_extraCatInc" />

    <TextView
        android:id="@+id/textView_dividend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Dividenden"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_extraCatInc"
        app:layout_constraintEnd_toEndOf="@+id/Button_dividend"
        app:layout_constraintStart_toStartOf="@+id/Button_dividend"
        app:layout_constraintTop_toBottomOf="@+id/Button_dividend" />

    <TextView
        android:id="@+id/textView_refund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Rückerst."
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_extraCatInc"
        app:layout_constraintEnd_toEndOf="@+id/Button_refund"
        app:layout_constraintStart_toStartOf="@+id/Button_refund"
        app:layout_constraintTop_toBottomOf="@+id/Button_refund" />

    <TextView
        android:id="@+id/textView_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Gehalt"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_refund"
        app:layout_constraintEnd_toEndOf="@+id/Button_salary"
        app:layout_constraintStart_toStartOf="@+id/Button_salary"
        app:layout_constraintTop_toBottomOf="@+id/Button_salary" />

    <TextView
        android:id="@+id/textView_awards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Prämie"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_gambling"
        app:layout_constraintEnd_toEndOf="@+id/Button_award"
        app:layout_constraintStart_toStartOf="@+id/Button_award"
        app:layout_constraintTop_toBottomOf="@+id/Button_award" />

    <TextView
        android:id="@+id/textView_investmentReturns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/droid"
        android:text="Investition"
        android:textColor="#FFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/Button_dividend"
        app:layout_constraintEnd_toEndOf="@+id/Button_investment"
        app:layout_constraintStart_toStartOf="@+id/Button_investment"
        app:layout_constraintTop_toBottomOf="@+id/Button_investment" />

    <ImageButton
        android:id="@+id/Button_award"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="450dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_investment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/award_icon_round" />

    <ImageButton
        android:id="@+id/Button_investment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="450dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/investment_income_icon_round" />

    <ImageButton
        android:id="@+id/Button_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="450dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_investment"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/salary_icon_round" />

    <ImageButton
        android:id="@+id/Button_dividend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="350dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_investment"
        app:srcCompat="@mipmap/dividens_icon_round" />

    <ImageButton
        android:id="@+id/Button_gambling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="350dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Button_dividend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Button_award"
        app:srcCompat="@mipmap/gamble_icon_round" />

    <ImageButton
        android:id="@+id/Button_refund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="350dp"
        android:background="#282828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Button_dividend"
        app:layout_constraintTop_toBottomOf="@+id/Button_salary"
        app:srcCompat="@mipmap/refund_icon_round" />

    <Button
        android:id="@+id/Button_createCat_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#282828"
        android:fontFamily="@font/droid"
        android:text="ERSTELLEN"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toEndOf="@+id/dropDown_InOut"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>